--- a/style.css
+++ b/style.css
@@ -19,10 +19,9 @@ ul {
 	list-style-type: upper-roman;
 }
 
-span {
+img {
 	border: thick;
-	padding: 0;
-	margin: 0;
+	align-content: center;
 }
 
 
